# seshi

./: .gitignore  CLAUDE.md  EXPLORATORY_TEST_PROMPT.md  IMPLEMENTATION.md  LICENSE  README.md  SPEC.md  TUI_TEST_REPORT.md  pyproject.toml
.github/: CODEOWNERS
src/seshi/: __main__.py  cli.py  cost.py  db.py  drain.py  hook_manager.py  lang_detect.py  models.py  paths.py  prompt_index.py  prompt_text.py  resume.py  scan.py  search.py  session_index.py  settings.py  shell_init.py  themes.py  time_utils.py  transcript.py  transcript_index.py
src/seshi/commands/: archive_cmd.py  (+19 more)
tests/: conftest.py  test_adaptive_layout.py  test_back_or_quit.py  test_cli_flags.py  test_cli_query_routing.py  test_command_palette.py  test_cost.py  test_css_refactor.py  test_db.py  test_drain.py  test_footer_overflow.py  test_frecency.py  test_header.py  test_header_count.py  test_hook.py  test_horizontal_layout.py  test_indexing_indicator.py  test_issue_fixes.py  test_lang_detect.py  test_no_color.py  test_notifications.py  test_paths.py  test_phase_c.py  test_preview_theme.py  test_projects.py  test_prompt_index.py  test_prompt_text.py  test_quit_toast.py  test_resume.py  test_scan.py  test_search.py  test_search_scope.py  test_sessions_bulk.py  test_sessions_tags_cache.py  test_shell_init.py  test_sort_mode_label.py  test_sparkline.py  test_tab_bar_counts.py  test_tab_counts.py  test_themes.py  (+5 more)
tests/tui/: assertions.py  conftest.py  seed.py  test_s01_launch.py  test_s02_navigation.py  test_s03_search.py  test_s04_actions.py  test_s05_bulk.py  test_s06_views.py  test_s07_frecency.py  test_s08_prompts.py  test_s10_cli_search_launch.py  tmux_controller.py
(+17 files in other folders)
