[project]
name = "seshi"
version = "0.1.0"
description = "Global session manager and resumer for Claude Code — Seshi"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
    "textual>=1.0",
    "rich>=13.0",
    "rapidfuzz>=3.0",
]

[project.scripts]
seshi = "seshi.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seshi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "tui: TUI tests requiring tmux",
    "smoke: fast TUI smoke tests",
    "regression: regression tests for known bugs",
    "slow: tests taking > 15 seconds",
    "visual: visual/theme tests",
    "stress: stress and adversarial tests",
    "performance: performance benchmark tests",
]
